<resources>
    <string name="app_name">SmartoCity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="smart_city_logo">smartcity_logo</string>
    <string name="sign_in_with_otp">Sign in with OTP</string>
    <string name="sign_in">Sign In</string>
    <string name="please_try_again_later">Please try again letter</string>
    <string name="unable_to_connect_to_server">Unable to connect server</string>
    <string name="first_name">First Name</string>
    <string name="last_name_optional">Last Name(Optional)</string>
    <string name="email_optional">Email</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="enter_6_digit_otp">Enter 6 digit OTP</string>
    <string name="we_have_sent_6_digit_otp">We have sent 6 digit OTP on</string>
    <string name="verify">Verify</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_no">Mobile no</string>
    <string name="send_otp">Send Otp</string>
    <string name="resend_otp">Resend otp</string>
    <string name="business_details">Business Details</string>
    <string name="business_name">Business Name</string>
    <string name="pancard_no">Pancard No</string>
    <string name="name_as_per_pancard">Name as per Pancard</string>
    <string name="bank_details">Bank Details</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="account_no">Account no</string>
    <string name="confirm_account_no">Confirm Account no</string>
    <string name="address_details">Address Details</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="submit">Submit</string>
    <string name="add_product_details">Add Product details</string>
    <string name="internetconnectio">Please check your internet connection!</string>


    <string-array name="array_color_name">
        <item>Red</item>
        <item>Yellow</item>
        <item>Pink</item>
    </string-array>

    <string-array name="array_country_name">
        <item>India</item>
        <item>Chine</item>
        <item>UK</item>
    </string-array>

    <string-array name="array_delivery_yes_no">
        <item>No</item>
        <item>Yes</item>

    </string-array>




    <!--Menu item texts -->

    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_1">Offers</string>
    <string name="item_2">Electronics</string>
    <string name="item_3">Lifestyle</string>
    <string name="item_4">Home Appliances</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next1">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!
    </string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->

    <string name="fcm_message">FCM Message</string>




</resources>
