<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fillViewport="true"

        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
                android:id="@+id/card_mobile_no"
                xmlns:card_view="https://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="5dp"
                app:cardCornerRadius="@dimen/_5sdp"
                card_view:cardUseCompatPadding="true">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:layout_margin="@dimen/_10sdp"
            >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="@dimen/_16sdp"
                          android:text="@string/sign_up"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="@dimen/_12sdp"
                          android:layout_marginTop="@dimen/_5sdp"
                          android:text="Please enter your details. "/>

                <EditText
                        android:id="@+id/edt_first_name"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:inputType="text"
                        android:background="@drawable/edit_border"
                        android:hint="@string/first_name"
                        android:paddingStart="@dimen/_5sdp"
                        android:textSize="@dimen/_14sdp"

                        android:paddingLeft="@dimen/_12sdp"/>


                <EditText
                        android:id="@+id/edt_last_name"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:inputType="text"
                        android:background="@drawable/edit_border"
                        android:hint="@string/last_name_optional"
                        android:paddingStart="@dimen/_5sdp"
                        android:textSize="@dimen/_14sdp"

                        android:paddingLeft="@dimen/_12sdp"/>

                <EditText
                        android:id="@+id/edt_email"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/edit_border"
                        android:hint="@string/email_optional"
                        android:paddingStart="@dimen/_5sdp"
                        android:textSize="@dimen/_14sdp"
                        android:paddingLeft="@dimen/_12sdp"/>


                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                    <Button
                            android:id="@+id/btn_send_OTP"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_35sdp"
                            android:text="@string/send_otp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:textSize="@dimen/_14sdp"

                            android:textColor="@color/white"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:background="@color/colorAccent" android:layout_marginEnd="@dimen/_5sdp"/>

                    <Button
                            android:id="@+id/btn_resend_OTP"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:visibility="gone"
                            android:layout_height="@dimen/_35sdp"
                            android:text="@string/resend_otp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:textSize="@dimen/_14sdp"
                            android:textColor="@color/white"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:background="@color/colorPrimaryDark" android:layout_marginLeft="@dimen/_5sdp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <EditText
                        android:id="@+id/edt_password"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:inputType="textPassword"
                        android:background="@drawable/edit_border"
                        android:hint="@string/password"

                        android:paddingStart="@dimen/_5sdp"
                        android:textSize="@dimen/_14sdp"
                        android:paddingLeft="@dimen/_12sdp"/>

                <EditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:inputType="textPassword"
                        android:background="@drawable/edit_border"
                        android:hint="@string/confirm_password"
                        android:paddingStart="@dimen/_5sdp"
                        android:textSize="@dimen/_14sdp"
                        android:paddingLeft="@dimen/_12sdp"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/_10sdp"
                xmlns:card_view="https://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="5dp"
                app:cardCornerRadius="@dimen/_5sdp"
                card_view:cardUseCompatPadding="true">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:layout_margin="@dimen/_10sdp"
            >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="@dimen/_16sdp"
                          android:text="@string/verify"/>

                <TextView
                        android:id="@+id/txt_otp_send_on" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/we_have_sent_6_digit_otp"/>

                <EditText
                        android:id="@+id/edt_otp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:inputType="number"
                        android:background="@drawable/edit_border"
                        android:hint="@string/enter_6_digit_otp"
                        android:paddingStart="@dimen/_5sdp"
                        android:textSize="@dimen/_14sdp"
                        android:maxLength="6"
                        android:paddingLeft="@dimen/_12sdp"/>


                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="@dimen/_12sdp"
                          android:visibility="gone"
                          android:layout_marginTop="@dimen/_5sdp"
                          android:text="Waiting for OTP...5 sec "/>

                <Button
                        android:id="@+id/btn_sign_up_verify"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:text="@string/verify"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@color/colorAccent"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>